package dev.iamrat.board.comment.domain;

import dev.iamrat.board.support.persistence.AuditingFields;
import dev.iamrat.board.post.domain.Post;
import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Index;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.OneToMany;
import jakarta.persistence.Table;
import java.util.ArrayList;
import java.util.List;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import org.hibernate.annotations.OnDelete;
import org.hibernate.annotations.OnDeleteAction;

@Entity
@Table(
    name = "comments",
    indexes = {
        @Index(name = "idx_comments_post_created_at", columnList = "post_id, created_at"),
        @Index(name = "idx_comments_parent_id", columnList = "parent_id")
    }
)
@Getter
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class Comment extends AuditingFields {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(optional = false)
    @JoinColumn(name = "post_id", nullable = false)
    @OnDelete(action = OnDeleteAction.CASCADE)
    private Post post;

    @Column(nullable = false, length = 500)
    private String content;

    @Column(name = "account_id", nullable = false, updatable = false)
    private Long accountId;

    @Column(name = "nickname", nullable = false, length = 50)
    private String nickname;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "parent_id")
    @OnDelete(action = OnDeleteAction.CASCADE)
    private Comment parent;

    @OneToMany(mappedBy = "parent", cascade = CascadeType.ALL, orphanRemoval = true)
    @Builder.Default
    private List<Comment> replies = new ArrayList<>();

    @Column(name = "like_count", nullable = false)
    @Builder.Default
    private Long likeCount = 0L;

    public static Comment create(Post post, Comment parent, String content, Long accountId, String nickname) {
        return Comment.builder()
            .post(post)
            .parent(parent)
            .content(content)
            .accountId(accountId)
            .nickname(nickname)
            .build();
    }

    public void updateContent(String newContent) {
        this.content = newContent;
    }

    public void addReply(Comment comment) {
        this.replies.add(comment);
        comment.parent = this;
    }

    public void removeReply(Comment comment) {
        this.replies.remove(comment);
    }
}
