Project postforge_mvp_erd {
  database_type: 'PostgreSQL'
  Note: '''
  PostForge MVP ERD.

  Product boundary:
  public board baseline + shared outbox + external information collection + keyword subscription + email notification.

  Design rule:
  collected external items are normalized once, matched against enabled keyword subscriptions,
  and delivered through tracked notification/email states.
  outbox_events is a standalone infrastructure table with no domain-table FK.
  '''
}

Enum account_status {
  ACTIVE
  WITHDRAWN
  SUSPENDED
}

Enum content_status {
  PUBLISHED
  HIDDEN
  DELETED
}

Enum collector_job_status {
  STARTED
  SUCCESS
  FAILED
  PARTIAL_SUCCESS
}

Enum api_request_status {
  SUCCESS
  FAILED
  RATE_LIMITED
  TIMEOUT
  SKIPPED
}

Enum circuit_state {
  CLOSED
  OPEN
  HALF_OPEN
}

Enum collected_item_type {
  NEWS_ARTICLE
  BLOG_POST
  OFFICIAL_DOC
  MARKET_SIGNAL
}

Enum notification_channel {
  EMAIL
}

Enum notification_status {
  PENDING
  PROCESSING
  SENT
  FAILED
  SKIPPED
}

Enum email_delivery_status {
  PENDING
  SENT
  FAILED
}

Enum outbox_status {
  PENDING
  PROCESSING
  PUBLISHED
  FAILED
}

Table accounts {
  id bigint [pk, increment, not null]
  user_id varchar(100) [not null, unique]
  email varchar(255) [not null, unique]
  nickname varchar(50) [not null, unique]
  provider varchar(30) [not null, default: 'LOCAL']
  provider_id varchar(150)
  version bigint [not null, default: 0]
  status account_status [not null, default: 'ACTIVE']
  deleted_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (provider, provider_id) [unique, name: 'uk_accounts_provider_provider_id']
    status [name: 'idx_accounts_status']
  }

  Note: 'Auth identity and notification recipient boundary.'
}

Table account_roles {
  account_id bigint [not null]
  role varchar(30) [not null]

  indexes {
    (account_id, role) [pk, name: 'pk_account_roles']
  }
}

Table posts {
  id bigint [pk, increment, not null]
  account_id bigint [not null]
  author_nickname varchar(50) [not null]
  status content_status [not null, default: 'PUBLISHED']
  title varchar(200) [not null]
  content text [not null]
  summary varchar(500)
  category varchar(30) [not null, default: 'GENERAL']
  views bigint [not null, default: 0]
  like_count bigint [not null, default: 0]
  comment_count bigint [not null, default: 0]
  deleted_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (status, created_at) [name: 'idx_posts_status_created_at']
    (account_id, created_at) [name: 'idx_posts_account_created_at']
    (category, created_at) [name: 'idx_posts_category_created_at']
    (like_count, created_at) [name: 'idx_posts_like_count_created_at']
    (views, created_at) [name: 'idx_posts_views_created_at']
  }

  Note: 'Existing board content. MVP keeps simple count/index based sorting.'
}

Table post_tags {
  post_id bigint [not null]
  tag varchar(50) [not null]

  indexes {
    (post_id, tag) [pk, name: 'pk_post_tags']
  }
}

Table comments {
  id bigint [pk, increment, not null]
  post_id bigint [not null]
  account_id bigint [not null]
  parent_id bigint
  author_nickname varchar(50) [not null]
  content varchar(1000) [not null]
  status content_status [not null, default: 'PUBLISHED']
  like_count bigint [not null, default: 0]
  deleted_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (post_id, created_at) [name: 'idx_comments_post_created_at']
    (account_id, created_at) [name: 'idx_comments_account_created_at']
    parent_id [name: 'idx_comments_parent_id']
    status [name: 'idx_comments_status']
  }
}

Table post_like {
  id bigint [pk, increment, not null]
  post_id bigint [not null]
  account_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (post_id, account_id) [unique, name: 'uk_post_like_post_account']
    account_id [name: 'idx_post_like_account_id']
  }
}

Table comment_like {
  id bigint [pk, increment, not null]
  comment_id bigint [not null]
  account_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (comment_id, account_id) [unique, name: 'uk_comment_like_comment_account']
    account_id [name: 'idx_comment_like_account_id']
  }
}

Table post_file {
  id bigint [pk, increment, not null]
  post_id bigint [not null]
  original_file_name varchar(255) [not null]
  saved_file_name varchar(255) [not null]
  file_path varchar(500) [not null]
  file_size bigint
  file_type varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (post_id, created_at) [name: 'idx_post_file_post_created_at']
  }
}

Table collector_sources {
  id bigint [pk, increment, not null]
  name varchar(100) [not null, unique]
  provider varchar(80)
  source_type varchar(40) [not null]
  base_url varchar(500)
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    provider [name: 'idx_collector_sources_provider']
    source_type [name: 'idx_collector_sources_source_type']
    is_active [name: 'idx_collector_sources_is_active']
  }

  Note: 'External API/provider registry. Collector code should not hardcode provider names.'
}

Table collector_source_policies {
  source_id bigint [pk, not null]
  enabled boolean [not null, default: true]
  timeout_ms int [not null, default: 3000]
  retry_max_attempts int [not null, default: 2]
  retry_backoff_ms int [not null, default: 500]
  rate_limit_per_minute int
  daily_quota int
  circuit_state circuit_state [not null, default: 'CLOSED']
  opened_reason varchar(500)
  updated_at timestamptz [not null, default: `now()`]
}

Table collector_jobs {
  id bigint [pk, increment, not null]
  source_id bigint [not null]
  keyword varchar(150)
  status collector_job_status [not null]
  request_count int [not null, default: 0]
  item_count int [not null, default: 0]
  started_at timestamptz [not null, default: `now()`]
  ended_at timestamptz
  error_message text

  indexes {
    (source_id, started_at) [name: 'idx_collector_jobs_source_started_at']
    (keyword, started_at) [name: 'idx_collector_jobs_keyword_started_at']
    status [name: 'idx_collector_jobs_status']
  }
}

Table collector_api_requests {
  id bigint [pk, increment, not null]
  job_id bigint [not null]
  source_id bigint [not null]
  request_key varchar(500)
  status api_request_status [not null]
  http_status int
  duration_ms int
  retry_attempt int [not null, default: 0]
  rate_limited boolean [not null, default: false]
  error_message text
  requested_at timestamptz [not null, default: `now()`]

  indexes {
    (source_id, requested_at) [name: 'idx_collector_api_requests_source_requested_at']
    job_id [name: 'idx_collector_api_requests_job_id']
    status [name: 'idx_collector_api_requests_status']
    request_key [name: 'idx_collector_api_requests_request_key']
  }

  Note: 'Attempt-level request log for timeout, retry, rate-limit, and latency analysis.'
}

Table collected_items {
  id bigint [pk, increment, not null]
  job_id bigint [not null]
  item_type collected_item_type [not null]
  original_link varchar(1000) [not null, unique]
  dedupe_hash varchar(128) [unique]
  title varchar(500) [not null]
  summary varchar(1000)
  content_snippet text
  source_name varchar(150)
  provider varchar(80)
  keyword varchar(150)
  raw_payload jsonb
  published_at timestamptz
  collected_at timestamptz [not null, default: `now()`]

  indexes {
    job_id [name: 'idx_collected_items_job_id']
    item_type [name: 'idx_collected_items_item_type']
    (keyword, collected_at) [name: 'idx_collected_items_keyword_collected_at']
    published_at [name: 'idx_collected_items_published_at']
    collected_at [name: 'idx_collected_items_collected_at']
  }

  Note: 'Normalized raw external item. raw_payload keeps the provider response for reprocessing.'
}

Table outbox_events {
  id bigint [pk, increment, not null]
  event_id varchar(36) [not null, unique]
  event_type varchar(150) [not null]
  aggregate_type varchar(80)
  aggregate_id varchar(100)
  payload text [not null]
  status outbox_status [not null, default: 'PENDING']
  retry_count int [not null, default: 0]
  available_at timestamptz [not null, default: `now()`]
  occurred_at timestamptz [not null, default: `now()`]
  published_at timestamptz
  last_error varchar(2000)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (status, available_at) [name: 'idx_outbox_events_status_available_at']
    (event_type, created_at) [name: 'idx_outbox_events_event_type_created_at']
    (aggregate_type, aggregate_id) [name: 'idx_outbox_events_aggregate']
  }

  Note: 'Standalone reliable event handoff table. It has no FK to board, collector, or notification tables; aggregate fields are logical references only.'
}

Table keyword_subscriptions {
  id bigint [pk, increment, not null]
  account_id bigint [not null]
  keyword varchar(150) [not null]
  enabled boolean [not null, default: true]
  last_notified_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (account_id, keyword) [unique, name: 'uk_keyword_subscriptions_account_keyword']
    (enabled, keyword) [name: 'idx_keyword_subscriptions_enabled_keyword']
  }

  Note: 'User keyword watch list for external information notifications.'
}

Table notification_events {
  id bigint [pk, increment, not null]
  account_id bigint [not null]
  subscription_id bigint [not null]
  collected_item_id bigint [not null]
  channel notification_channel [not null, default: 'EMAIL']
  status notification_status [not null, default: 'PENDING']
  matched_keyword varchar(150) [not null]
  created_at timestamptz [not null, default: `now()`]
  processed_at timestamptz

  indexes {
    (subscription_id, collected_item_id, channel) [unique, name: 'uk_notification_events_subscription_item_channel']
    (status, created_at) [name: 'idx_notification_events_status_created_at']
    (account_id, created_at) [name: 'idx_notification_events_account_created_at']
    collected_item_id [name: 'idx_notification_events_collected_item_id']
  }

  Note: 'Product-level notification queue created by keyword subscription matches.'
}

Table email_delivery_logs {
  id bigint [pk, increment, not null]
  notification_event_id bigint [not null]
  to_email varchar(255) [not null]
  subject varchar(300) [not null]
  status email_delivery_status [not null, default: 'PENDING']
  retry_count int [not null, default: 0]
  last_error text
  sent_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (notification_event_id, created_at) [name: 'idx_email_delivery_logs_event_created_at']
    (status, created_at) [name: 'idx_email_delivery_logs_status_created_at']
  }

  Note: 'Email delivery result and retry state for notification events.'
}

Ref: account_roles.account_id > accounts.id

Ref: posts.account_id > accounts.id
Ref: post_tags.post_id > posts.id
Ref: comments.post_id > posts.id
Ref: comments.account_id > accounts.id
Ref: comments.parent_id > comments.id
Ref: post_like.post_id > posts.id
Ref: post_like.account_id > accounts.id
Ref: comment_like.comment_id > comments.id
Ref: comment_like.account_id > accounts.id
Ref: post_file.post_id > posts.id

Ref: collector_source_policies.source_id > collector_sources.id
Ref: collector_jobs.source_id > collector_sources.id
Ref: collector_api_requests.job_id > collector_jobs.id
Ref: collector_api_requests.source_id > collector_sources.id
Ref: collected_items.job_id > collector_jobs.id

Ref: keyword_subscriptions.account_id > accounts.id
Ref: notification_events.account_id > accounts.id
Ref: notification_events.subscription_id > keyword_subscriptions.id
Ref: notification_events.collected_item_id > collected_items.id
Ref: email_delivery_logs.notification_event_id > notification_events.id

Note mvp_boundaries {
  '''
  Deferred from MVP:
  trend clusters, post reference/evidence links, ranking read models, external MQ broker,
  private workspace, billing/subscription, full AI writing assistant, AI auto posting,
  and AI cost-control tables.

  MVP focus:
  external information collection data is matched against user keyword subscriptions
  and delivered through tracked email notification state.

  Messaging boundary:
  outbox_events belongs to the standalone messaging module. Feature-module usage is deferred
  until an event contract and dependency direction are explicitly chosen.
  '''
}
